crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_156_DIS23C01_DAOU_Buzz_Waldog_USA_Unl_Beta.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-156-DIS23C01-DAOU/Buzz & Waldog (USA) (Unl) (Beta).nes
rom_sha256=ba63d5ec8d6012bf44aa932b19f32ece50cb7f70113adca35191281278a4c6be
frames=1141
fb_bytes=245760
cycles=33949774
audio_samples=836505
audio_fnv1a64=240300e897f148fe
checkpoint f900 fb_fnv1a64=22438401777729a1
checkpoint f1100 fb_fnv1a64=7ca1087504a76f2a
