crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_156_DIS23C01_DAOU_Buzz_and_Waldog_U_Prototype.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-156-DIS23C01-DAOU/Buzz and Waldog (U) (Prototype) [!].nes
rom_sha256=153f0a40dd78ae0630f9bf68a716b199ec4085d9ad1098d06a5231942c361c74
frames=1141
fb_bytes=245760
cycles=33949774
audio_samples=836505
audio_fnv1a64=240300e897f148fe
checkpoint f900 fb_fnv1a64=22438401777729a1
checkpoint f1100 fb_fnv1a64=7ca1087504a76f2a
