crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_156_DIS23C01_DAOU_Ko_Ko_Eo_Deu_Ben_Ce_K.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-156-DIS23C01-DAOU/Ko Ko Eo Deu Ben Ce (K).nes
rom_sha256=4c4d1818ce89ababd27881e865946f19d32760362173065008cda6100da06c2d
frames=1141
fb_bytes=245760
cycles=33949774
audio_samples=836505
audio_fnv1a64=b0ec08f2809dac05
checkpoint f900 fb_fnv1a64=22438401777729a1
checkpoint f1100 fb_fnv1a64=b4d11d9c3173e1dc
