crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_156_DIS23C01_DAOU_Metal_Force_K.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-156-DIS23C01-DAOU/Metal Force (K) [!].nes
rom_sha256=25f5359a73cac2d16ed98940f0b537f0392f232554d457ed476e21a5979419ff
frames=1141
fb_bytes=245760
cycles=33949773
audio_samples=836505
audio_fnv1a64=3ee3a0e0e0c8d5eb
checkpoint f900 fb_fnv1a64=ae360f6c721fad4a
checkpoint f1100 fb_fnv1a64=7b99a9383a4f362a
