crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_159_BandaiLZ93D50_24C01_Magical_Taruruuto_kun_2_Mahou_Daibouken_Japan_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-159-BandaiLZ93D50-24C01/Magical Taruruuto-kun 2 - Mahou Daibouken (Japan).zip
rom_sha256=021c2230ef469a5313a016cf3397ec11978aee57c33a05ccd00f47a5f7084014
frames=1141
fb_bytes=245760
cycles=33949771
audio_samples=836505
audio_fnv1a64=bae05aa3622e8b00
checkpoint f900 fb_fnv1a64=fce1606f3db991ca
checkpoint f1100 fb_fnv1a64=fce1606f3db991ca
