crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_159_BandaiLZ93D50_24C01_Magical_Taruruuto_kun_Fantastic_World_J_PRG0.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-159-BandaiLZ93D50-24C01/Magical Taruruuto-kun - Fantastic World!! (J) (PRG0) [!].nes
rom_sha256=422e38bf5ded78de7d4d4e3e7a39d7b16331ca5cbe8dab0172e7896e8190af99
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=81c3cf22066c7e37
checkpoint f900 fb_fnv1a64=f5c040112855dad2
checkpoint f1100 fb_fnv1a64=e93e16afe32c4c1e
