crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_159_BandaiLZ93D50_24C01_Magical_Taruruuto_kun_Fantastic_World_Japan_Rev_1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-159-BandaiLZ93D50-24C01/Magical Taruruuto-kun - Fantastic World!! (Japan) (Rev 1).zip
rom_sha256=c066387741a60349459005a77e335d9a42ee61ed5596ade78f2d4c4dd5059fff
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=a3d3ae7735d9937a
checkpoint f900 fb_fnv1a64=f5c040112855dad2
checkpoint f1100 fb_fnv1a64=e93e16afe32c4c1e
